# h5grid

./: .gitignore  PyPI-Recovery-Codes-Shalini_Balaram-2026-07-22T01_01_26.029455.txt  README.md  h5-viewer-spec.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
backend/h5grid/: __init__.py  cli.py  export.py  files.py  jsonsafe.py  main.py  pywr.py  readers.py  security.py  service.py  stats.py  timeindex.py  tree.py
backend/tests/: conftest.py  make_fixtures.py  test_api.py  test_cli.py  test_jsonsafe.py  test_pywr.py  test_readers.py  test_robustness.py  test_security.py  test_stats.py  test_timeindex.py  test_tree.py
examples/: make_examples.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/api/: client.ts  hooks.ts  types.ts
frontend/src/components/: DataGrid.tsx  FileBrowser.tsx  Inspector.tsx  PlotDrawer.tsx  TreePanel.tsx
